...
    <string name="toolbar_go_back">Back</string>

    <!-- [Toolbar][a11y] Goes forward a page in the tab's navigation history. -->
    <string name="toolbar_go_forward">Forward</string>

    <!-- [Toolbar][a11y] Saves the current URL to one of the user's Spaces. -->
    <string name="toolbar_save_to_space">Save to Space</string>

    <!-- [Toolbar][a11y] Sends the user to view their tabs and Spaces. -->
    <string name="toolbar_tabs_and_spaces">Manage your tabs and spaces</string>

    <!-- [Toolbar][a11y] Opens the menu for the current screen. -->
    <string name="toolbar_menu">Open menu</string>
...
    <string name="menu_download_link">Download link</string>

    <!-- [Context menu item] Opens the long-pressed link in a new tab. -->
    <string name="menu_open_in_new_tab">Open in new tab</string>

    <!-- [Context menu item] Opens the long-pressed link in a new incognito tab. -->
    <string name="menu_open_in_new_incognito_tab">Open in new incognito tab</string>

    <!-- [Context menu item] Copies the URL for the link that triggered the context menu. -->
    <string name="menu_copy_link_address">Copy link address</string>

    <!-- [Context menu item] Copies the text of the link that triggered the context menu. -->
    <string name="menu_copy_link_text">Copy link text</string>
...

    <!-- [DefaultBrowser][Button] Text for setting Neeva to be the user's default browser. -->
    <string name="default_browser_remind_me_later">Remind me later</string>


    <!-- [Spaces][Button][a11y] Triggers adding the current web page to the Space with the given name. -->
    <string name="space_add_url_to_space">Add site to \"%1s\"</string>

    <!-- [Spaces][Snackbar] Briefly appears to tell the user that the current web page was added to the Space with the given name. -->
    <string name="space_added_url_to_space">Added site to \"%1s\"</string>

    <!-- [Spaces][Button][a11y] Triggers removal of the current web page from the Space with the given name. -->
    <string name="space_remove_url_from_space">Remove site from \"%1s\"</string>

    <!-- [Spaces][Snackbar] Briefly appears to tell the user that the current web page was removed from the Space with the given name. -->
    <string name="space_removed_url_from_space">Removed site from \"%1s\"</string>'

    <!-- [Spaces][Dialog] Header for the dialog used to create a new Space. -->
    <string name="space_create">Create a Space</string>

    <!-- [Spaces] Appears in a text field that asks the user for the name of the new Space. -->
    <string name="space_create_placeholder">Space name</string>
...
    <string name="space_stats_private">Only visible to you and people you shared with</string>

    <!-- [Spaces][Menu item][a11y] Shows additional information about the items in the current Space.  Displayed either as text in a menu or provided as a TalkBack string on an icon button. -->
    <string name="space_detail_show_descriptions">Show descriptions</string>

    <!-- [Spaces][Colloquial][Dialog] Promotional title for a dialog that encourages users to sign up for an account to be able to use the Spaces feature. -->
    <string name="space_intro_title">Neeva Spaces, bookmarks reimagined</string>

    <!-- [Spaces][Dialog] Promotional benefits of using Neeva Spaces. -->
    <string name="space_intro_body">Save and share content instantly. Stay organized by adding images, websites and documents to a Space today.</string>

    <!-- [Spaces][Button] Displayed on a button that sends the user to sign up for an account. -->
    <string name="space_intro_cta">Sign up to continue</string>

    <!-- [Spaces] Title for the bottom sheet that the user uses to share their current Space with somebody else. -->
    <string name="share_space_title">Share Space</string>
...
    <string name="settings_close_incognito_when_switching_body">When leaving incognito mode</string>

    <!-- [Settings][Toggle][a11y] Allows users to view / control content filtering. -->
    <string name="content_filter_content_description">Content protection</string>

    <!-- [Settings][a11y] Tells users that they are in incognito and allows them to view / control content filtering. -->
    <string name="content_filter_incognito_content_description">Incognito content protection</string>

    <!-- [Settings][Button] Sends the user to view Neeva's privacy policy. -->
    <string name="settings_privacy_policy">Privacy policy</string>

    <!-- [Settings][Button] Sends the user to the Neeva homepage to learn how to use the product. -->
    <string name="settings_welcome_tours">Welcome tours</string>
...
