...
    val shouldDisplayFilled = !isIncognito && spaceStoreHasUrl

    IconButton(
        enabled = !isIncognito,
        onClick = browserToolbarModel::onAddToSpace,
        modifier = modifier.semantics {
            testTag = "IS IN SPACE".takeIf { shouldDisplayFilled } ?: "NOT IN SPACE"
        }
    ) {
        val resourceId = if (shouldDisplayFilled) {
            R.drawable.ic_baseline_bookmark_24
        } else {
            R.drawable.ic_baseline_bookmark_border_24
...
