...
    <!-- [History][Snackbar] Tells the user that the site with the given title was removed from their browsing history. -->
    <string name="history_removed_visit">Removed \"%1$s\" from history</string>



    <!-- [a11y] Clicking on this will collapse the section with the given title. -->
    <string name="section_collapse">Collapse section: %1$s</string>

    <!-- [a11y] Clicking on this will display more items from the section with the given title. -->
    <string name="section_expand">Expand section: %1$s</string>

    <!-- [a11y] Clicking on this will fully expand the section with the given title. -->
    <string name="section_fully_expand">Fully expand section: %1$s</string>



    <!-- [Find in page] Says that the user is viewing a specific result.  E.g. "100/150" = "100 out of 150" -->
    <string name="find_in_page_index">%1$d/%2$d</string>

...


    <!-- [Zero query][Button] Sends the user to the homepage (https://www.neeva.com). -->
    <string name="home">Home</string>

    <!-- [Zero query] Section header for sites the user has frequently visited. -->
    <string name="suggested_sites">Suggested sites</string>

    <!-- [Zero query] Section header for Spaces from Neeva community members. -->
    <string name="community_spaces">From the Neeva Community</string>

    <!-- [Zero query] Section header for searches the user has performed. -->
    <string name="searches">Searches</string>

    <!-- [Zero query] Section header for the user's Spaces. -->
    <string name="spaces">Spaces</string>



...
